2004-10-13  David Brennan  <eCos@brennanhome.com>

	* include/fileio.h: 
	* src/file.cxx: Added support for cyg_fs_fssync,
	cyg_fs_get_attrib, and cyg_fs_set_attrib

2004-10-13  David Brennan  <eCos@brennanhome.com>

	* src/file.cxx: Added a check data ptr in LOCK_FS

2004-10-06  David Brennan  <eCos@brennanhome.com>

	* tests/pselect.c: Added check for POSIX signals while building
	the test case.
	* tests/select.c: Include sys/select.h to prevent a possible warning.
	
2004-10-01  Oyvind Harboe  <oyvind.harboe@zylin.com>

        * src/select.cxx: place the CYGBLD_ATTRIB_INIT_PRI such that it
	compiles for gcc 3.4.2 which is more picky about its placement.
	
2004-07-23 Oyvind Harboe <oyvind.harboe@zylin.com>

	* src/select.cxx: now correctly returns from select() on
	e.g. closed file pointers.

2004-04-15  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/fileio1.c: include stdio.h for rename() prototype.

2004-04-07  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/fd.cxx: Fix the assert just added. 0 is a valid fd.

2004-03-25  Sebastien Couret  <sebastien.couret@elios-informatique.fr>

	* src/fd.cxx: Added CYG_ASSERT bound checking for file descriptor
	numbers (0<fd<CYGNUM_FILEIO_NFD).

2004-03-12  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/fio.h: If no POSIX then CYG_FILEIO_DELIVER_SIGNALS
	and CYG_FILEIO_SIGMASK_SET call CYG_UNUSED_PARAM on their
	arguments to silence warnings.
	* src/file.cxx (rename): Use a throw specifier to match
	prototype.

2004-02-16  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/io.cxx (readwritev): For EWOULDBLOCK and EAGAIN return
	the number of bytes written if any have been written.

2004-01-07  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/select.cxx: No need to make pselect() dependent on
	CYGPKG_POSIX - that would depend on the arguments. Assert instead,
	and more correctly make it contingent on CYGPKG_POSIX_SIGNALS.

	* src/fio.h: Separate out signal functionality into its own separate
	test.
