@@ -1,3 +1,15 @@
+2004-11-14  Andrew Lunn  <andrew.lunn@ascom.ch>
+
+	* tests/fileio1.c: Start the test using cyg_user_start so that
+	it can be used without the kernel.	
+	* tests/testfs.c (testfs_time): If we don't have a kernel return 0
+	as the time rather than the current time.
+
+2004-11-14  Jani Monoses <jani@iv.ro>
+
+	* src/devfs.cxx: Removed unneeded header files so the package can
+	be compiled without the kernel.
+
 2004-10-13  David Brennan  <eCos@brennanhome.com>
 
 	* include/fileio.h: 
